# htmlfactory

./: .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: code-quality.yml
examples/: example.py
htmlfactory/: InnerHtml.py  SingletonTag.py  TagAndClassStr.py  TagAttribute.py  TagAttributeList.py  TagFactory.py  __init__.py
htmlfactoryCLI/: main.py
htmlfactory_new/: HTMLElement.py  HTMLTag.py  InnerHtml.py  README.md  TODO.md  Tag.py  TagFactory.py  protocols.py  tag.py  test.py
htmlfactory_new/bootstrap/: flask_app_testing.py
htmlfactory_new/bootstrap/templates/: index.html
src/: InnerHtml.py  TagAttribute.py  TagAttributeList.py  TagFactory.py  htmlfactory.py
tests/: TestCLI.py  test.py
