[metadata]
# replace with your username:
name = htmlfactory
version = 0.0.4
author = Jeff Gruenbaum
author_email = jeff.gruenbaum@gmail.com
description = A simple way to produce HTML with Python.
long_description = file: README.md
long_description_content_type = text/markdown
repository-url = https://github.com/jgrugru/htmlfactory.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
